--- a/test/MagElementTestWindows/MagElementTestWindows.vcxproj
+++ b/test/MagElementTestWindows/MagElementTestWindows.vcxproj
@@ -128,7 +128,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>c:\dev\boost_1_87_0</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\boost_1_87_0;..\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
