MagElementTestLinux and MagElementTestWindows version 1.2.4 Release

--- a/test/MagElementTestWindows/MagElementTestWindows.vcxproj
+++ b/test/MagElementTestWindows/MagElementTestWindows.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\gmplatform.h" />
+    <ClInclude Include="..\include\helptext.h" />
     <ClInclude Include="..\include\licensetext.h" />
     <ClInclude Include="..\include\MagElementData.hpp" />
   </ItemGroup>
